--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,7 +59,7 @@ button.btn-outline-light:hover {
 
 .box-add input.form-control.border-999{
     color: #000;
-    border: 1px solid #eee !important;
+    border: 1px solid #ccc !important;
 }
 
 .custom-file {
